
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <artifactId>simple-plugin-framework</artifactId>
    <groupId>de.root1</groupId>
    <packaging>jar</packaging>
    <version>1.0.1-SNAPSHOT</version>
    <name>Simple Plugin Framework ${project.version}</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
    </properties>
    
    <dependencies>

        <!-- Simple Logging Facade 4 Java -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.7.25</version>
            <scope>test</scope>
        </dependency>
        
        <!-- JUnit for testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.collections</groupId>
            <artifactId>google-collections</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    
    <!-- upload informations for deploying the jar -->
    <distributionManagement>
        <repository>
            <id>root1-releases</id>
            <name>internal releases</name>
            <url>http://maven.root1.de/repository/releases/</url>
        </repository>
        <snapshotRepository>
            <id>root1-snapshots</id>
            <name>internal snapshots</name>
            <url>http://maven.root1.de/repository/snapshots/</url>
        </snapshotRepository>      
    </distributionManagement>  

</project>



